--- a/app/src/main/res/layout/activity_admin_chapter.xml
+++ b/app/src/main/res/layout/activity_admin_chapter.xml
@@ -7,10 +7,10 @@
     android:background="@drawable/gradient_background">
 
     <Button
-        android:id="@+id/addButton"
+        android:id="@+id/addChapterButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Thêm truyện mới"
+        android:text="Thêm chapter mới"
         android:textColor="@android:color/white"
         android:background="@drawable/button_background"
         android:padding="12dp"
