--- a/app/src/main/res/layout/chapter_item.xml
+++ b/app/src/main/res/layout/chapter_item.xml
@@ -15,9 +15,9 @@
         android:background="@android:color/white">
 
         <ImageView
-            android:id="@+id/comicImageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/chapterImageView"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:scaleType="centerCrop"
             android:layout_marginEnd="8dp"/>
 
@@ -28,19 +28,12 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/titleTextView"
+                android:id="@+id/chapterTitleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="#212121"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/authorTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="#757575" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,7 +48,6 @@
                     android:text="Sửa"
                     android:textColor="@android:color/white"
                     android:background="@drawable/button_background"
-                    android:visibility="gone"
                     android:layout_marginEnd="8dp" />
 
                 <Button
@@ -64,8 +56,7 @@
                     android:layout_height="wrap_content"
                     android:text="Xóa"
                     android:textColor="@android:color/white"
-                    android:background="@drawable/button_background"
-                    android:visibility="gone" />
+                    android:background="@drawable/button_background" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
